--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "github.com/mattrandallbecker",
     "license": "MIT",
     "dependencies": {
+        "dotenv": "^16.5.0",
         "express": "^4.19.2"
     },
     "devDependencies": {
